# berth

./: .gitignore  Cargo.toml  README.md  bacon.toml  flake.nix  justfile
.cargo/: config.toml
.github/workflows/: ci.yml
config_examples/: basic.toml  docker.toml  simple_docker.dockerfile  simple_preset.toml
examples/: basic.toml
github/workflows/: code-review.yml
src/: arguments.rs  cli.rs  configuration.rs  docker.rs  errors.rs  lib.rs  main.rs  presets.rs  util.rs
tests/: arguments.rs  cli.rs  configuration.rs  docker.rs  presets.rs  test.rs
tests/test_utils/: base.rs  config.rs  harness.rs  mod.rs  output.rs  utils.rs
