[package]
name = "berth"
version = "0.1.0"
edition = "2021"

[dependencies]
assert_cmd = "2.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
indoc = "2"
rexpect = "0.5"
rand = "0.8"
log4rs = { version = "1.3", features = ["file_appender"] }
log = "0.4"
colored = "3"
envmnt = "0.10"
shell-words = "1.1"
thiserror = "2"
regex = "1.11"
indicatif = "0.17"

[dev-dependencies]
ctor = "0.2"
eyre = "0.6"
color-eyre = "0.6"
tempfile = "3"
pretty_assertions = "1.4"
strip-ansi-escapes = "0.2"
