[package]
name = "berth"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
toml_edit = {version = "0.22", features = ["serde"] }
rand = "0.8"
log4rs = { version = "1.3", features = ["file_appender"] }
log = "0.4"
envmnt = "0.10"
shell-words = "1.1"
thiserror = "2"
bollard = "0.18"
tokio = { version = "1.43", features = ["rt-multi-thread", "io-std", "time", "macros"] }
tokio-util = "0.7"
sha2 = "0.10"
miette = { version = "7.5", features = ["fancy"] }


[dev-dependencies]
assert_cmd = "2.0"
ctor = "0.2"
tempfile = "3"
pretty_assertions = "1.4"
strip-ansi-escapes = "0.2"
expectrl = "0.7"
eyre = "0.6"
color-eyre = "0.6"
indoc = "2"
